--- a/ClinicaVeterinaria/appsettings.json
+++ b/ClinicaVeterinaria/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ClinicaVeterinariaContext": "Server=(localdb)\\mssqllocaldb;Database=ClinicaVeterinariaContext-ebd61dd2-a812-492b-8726-a14495113f95;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
+  //"ConnectionStrings": {
+  //  "ClinicaVeterinariaContext": "Server=(localdb)\\mssqllocaldb;Database=ClinicaVeterinariaContext-ebd61dd2-a812-492b-8726-a14495113f95;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //}
 }
