Update-Details-Delete-Edit Utente, Upload image for utente

--- a/ClinicaVeterinaria/ClinicaVeterinaria.csproj
+++ b/ClinicaVeterinaria/ClinicaVeterinaria.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Stripe.net" Version="43.19.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\utenti\" />
+  </ItemGroup>
+
 </Project>
