--- a/ClinicaVeterinaria/ClinicaVeterinaria.csproj
+++ b/ClinicaVeterinaria/ClinicaVeterinaria.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\prodotti\" />
     <Folder Include="wwwroot\images\utenti\" />
   </ItemGroup>
 
